[tool.poetry]
name = "ETLT"
version = "0.0.0"
description = "Extract Transform Load - but not in that strict order"
authors = ["Set Based IT Consultancy <info@setbased.nl>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/PyETLT/etlt"
keywords = ["ETLT", "ETL", "ELT", "Extract", "Transform", "Load", "DWH", "Data", "Warehouse"]
classifiers = ["Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database"]

[tool.poetry.dependencies]
python = "^3.9.0"
chardet = "^5.2.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.1"

[build-system]
requires = ["poetry-core"]
build-MySQL = "poetry.core.masonry.api"
